--- a/2B.html
+++ b/2B.html
@@ -1,13 +1,25 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>ejercicio de progamacion </title>
-<h1>titulo 1 de progamacion</h1>
-<h2>titulo 2 de progamacion</h2>
-<h3>titulo 2 de progamacion</h3>
-<br> 
-<iframe src="https://youtu.be/VJ_aT4T89aU" poster="presentacion.jpg" controls></iframe> 
-<body bgcolor="green">
+	<title> TERCERO DE INFORMATICA </title>
+	
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-</body>
+  <body>
+
+<center>
+
+  	<h1>titulo 1 de progamacion</h1>
+
+  	<h2>titulo 2 de progamacion</h2>
+
+  	<h3>titulo 3 de progamacion</h3>
+
+  	<p>tarea <b>HTML</b>agregar un video y compartir el enlace </p>
+  	
+  	<iframe width="560" height="315" src="https://youtu.be/P1v1KcARj-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  	</center>
+
+  </body>
 </html>
